# vue-demo

./: .env  .gitignore  README.md  config.json  eslint.config.ts  package.json  pnpm-lock.yaml  requirements.txt  server-config.json  server-run.ps1
docker/: influxdb2.sh
server/: README.md  config.json  main.py  pyproject.toml  server-config.json
server/src/: auth.py  config.py  config_logger.py  curd.py  database.py  main.py  schemas.py
src/: App.vue  index.css  main.css  main.js  main.ts
src-server/: auth.py  config.py  config_logger.py  curd.py  database.py  influxdb.py  main.py  pyproject.toml  redisc.py  scheduler.py  schemas.py  server-config.json  system_status.py
src-server/src/: auth.py  curd.py  database.py  influxdbc.py  main.py  schemas.py  system_status.py
src/api/: axios.js  axios.ts  init.ts
src/api/modules/: auth.js  auth.ts  charts.js  index.ts  login.js  status.ts  system.js  system.ts  user.js  user.ts
src/common/: colors.ts  useEcharts.ts  usePage.ts
src/components/: AppBreadcrumb.vue  AppHeader.vue  AppSider.vue  AppTab.vue  DarkButton.vue  Fullscreen.vue  FullscreenButton.vue  Icon.vue  JsonPretty.vue  LayoutSetting.vue  Personalization.vue  SiderLogo.vue  SiderMenu.vue  SiderMenuCollapseButton.vue  ToggleThemeButton.vue  UserAvatar.vue  UserInfo.vue  icons.ts
src/layouts/: settings.js
src/layouts/components/: AppTab.vue  (+10 more)
src/router/: index.js  index.ts  menu.js  menu.ts  routes.js  routes.ts
src/services/: axios.js
src/store/: index.js
src/stores/: index.ts
src/theme/: purple-passion.js
src/typings/: api.d.ts  ui.d.ts
(+49 files in other folders)
