[project]
name = "vue-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "bcrypt>=4.2.1",
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.115.8",
    "influxdb-client>=1.48.0",
    "psutil>=6.1.1",
    "psycopg2>=2.9.10",
    "pyjwt>=2.10.1",
    "pytz>=2025.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
]
